[package]
name = "short_print"
path="src/lib.rs"
version = "0.1.0"
authors = ["idkhan <islamuddin@careermap.pk>"]
edition = "2018"
description = "Show short message to console"
license = "ID KHAN"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]