[package]
name = "short_print"
path="src/lib.rs"
version = "0.1.1"
authors = ["idkhan <uddinislam46@gmail.com>"]
edition = "2018"
description = "Show short message to console"
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]